# taurishield

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  deny.toml
.github/workflows/: beta-release.yml  security.yml
crates/taurishield-analyzer/: Cargo.toml  taurishield.cdx.json  taurishield.json
crates/taurishield-analyzer/src/: lib.rs
crates/taurishield-builder/: Cargo.toml  taurishield.json
crates/taurishield-builder/src/: lib.rs
crates/taurishield-cli/: Cargo.toml  taurishield.json
crates/taurishield-cli/src/: main.rs
crates/taurishield-core/: Cargo.toml  taurishield.cdx.json  taurishield.json
crates/taurishield-core/src/: lib.rs
crates/taurishield-enforcer/: Cargo.toml
crates/taurishield-enforcer/src/: engine.rs  lib.rs  rule.rs  score.rs  tests.rs  tests.rs:Zone.Identifier  violation.rs  violations.rs
crates/taurishield-enforcer/src/rules/: allowlist.rs  capabilities.rs  csp.rs  filesystem.rs  isolation.rs  mod.rs  network.rs  permissions.rs  profile.rs  shell.rs  updater.rs
crates/taurishield-harden/: Cargo.toml  taurishield.json
crates/taurishield-harden/src/: lib.rs
crates/taurishield-policy/: Cargo.toml  taurishield.json
crates/taurishield-policy/src/: lib.rs
docs/: ANALYZE.md  ARCHITECTURE.md  ATTESTATION.md  BETA_RELEASE.md  BUILD_PIPELINE.md  CONTRIBUTING.md  DECISIONS.md  GITHUB_PUBLISHING.md  HARDEN.md  HARDENING_GUIDE.md  HOMOLOGATION_CHECKLIST.md  MANIFEST_SCHEMA.md  PIPELINE_OUTPUTS.md  PRODUCT_OVERVIEW.md  REAL_WORLD_VALIDATION.md  RELEASE.md  RELEASE_READINESS.md  RISK_MODEL.md  ROADMAP.md  SECURITY.md  SECURITY_GUARANTEES.md  SECURITY_PROFILES.md  SUPPLY_CHAIN.md  TESTING.md  THREAT_MODEL.md  WINDOWS_LAB_SETUP.md
manifests/: chatgpt.yml  claude.yml  crowdstrike.yml  gemini.yml  grafana.yml  kiosk.yml  openwebui.yml  portainer.yml  snipeit.yml  wazuh.yml
release/: PRODUCT_RELEASE_NOTES.md  RELEASE_TEMPLATE.md
sbom/: README.md
sbom/crates/taurishield-builder/: taurishield.cdx.json
sbom/crates/taurishield-cli/: taurishield.cdx.json
sbom/crates/taurishield-harden/: taurishield.cdx.json
sbom/crates/taurishield-policy/: taurishield.cdx.json
scripts/: generate_checksums.sh  generate_sbom.sh  local_check.ps1  local_check.sh  sign_artifact_cosign.sh
security/: BASELINE.md
templates/capabilities/: default.json.template
templates/tauri/: tauri.conf.json.template
tests/: README.md  security_regression.rs
tests/fixtures/manifests/: insecure-shell.yml
