[workspace]
resolver = "2"
members = [
  "crates/taurishield-cli",
  "crates/taurishield-core",
  "crates/taurishield-policy",
  "crates/taurishield-builder",
  "crates/taurishield-analyzer",
  "crates/taurishield-harden",
  "crates/taurishield-enforcer"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0-rc.2"
authors = ["TauriShield Contributors"]
repository = "https://github.com/lor-dir007/taurishield"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
regex = "1.10"
