[package]
name = "taurishield-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
taurishield-core = { path = "../taurishield-core", version = "1.0.0-rc.1" }
