[package]
name = "taurishield"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
taurishield-core = { path = "../taurishield-core" }
taurishield-policy = { path = "../taurishield-policy" }

taurishield-builder = { path = "../taurishield-builder" }
taurishield-analyzer = { path = "../taurishield-analyzer" }
taurishield-harden = { path = "../taurishield-harden" }
serde.workspace = true
serde_json.workspace = true
