[package]
name = "taurishield-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
taurishield-core = { path = "../taurishield-core" }
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
