[package]
name = "taurishield-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
taurishield-core = { path = "../taurishield-core", version = "1.0.0-rc.1" }
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
